# sophons-examples

./: README.md  pyproject.toml  pyrightconfig.json  run-observability.sh
agents/agentic_RAG/: agent.py  indexing.py  main.py  settings.py  tools.py
evaluation/: README.md  faithfulness.py  pass_k.py
guardrails/: README.md  approval_chat.py  guarded_agent.py  human_approval.py
observability/: README.md  traced_agent.py
rag/: README.md  chat.py  corrective.py  hybrid.py  naive.py  query_rewriting.py  reranker.py
rag/docs/: accounts.md  branches.md  cards.md  fees.md  loans.md  mobile-app.md  plans.md  refunds.md  reversals.md  support.md
