[project]
name = "sophons-examples"
version = "0.1.0"
description = "Runnable examples for the sophons agent framework"
requires-python = ">=3.11"
dependencies = [
    "sophons[otel,openai]",
    "pydantic-settings>=2.0",
    "rich>=15.0.0",
    "prompt-toolkit>=3.0.52",
]

[tool.uv.sources]
sophons = { path = "../sophons", editable = true }
